kubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: ms-user
  name: ms-user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-user
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ms-user
    spec:
      containers:
        - image: gcr.io/learning-357114/ms-user:1.0.0
          name: ms-user
          resources: {}
          imagePullPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: ms-user
spec:
  type: NodePort
  selector:
    app: ms-user
  ports:
  - protocol: TCP
    port: 3333
    targetPort: 3333
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-cluster-ingress
  annotations:
    # If the class annotation is not specified it defaults to "gce".
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /user
        pathType: ImplementationSpecific
        backend:
          service:
            name: ms-user
            port:
              number: 3333
      - path: /products
        pathType: ImplementationSpecific
        backend:
          service:
            name: ms-catalog
            port:
              number: 3333
      - path: /cart
        pathType: ImplementationSpecific
        backend:
          service:
            name: ms-cart
            port:
              number: 3333
      - path: /order
        pathType: ImplementationSpecific
        backend:
          service:
            name: ms-order
            port:
              number: 3333
